src/Pages/stall-details/stall-details.css
.stall-details {
  /* Use absolute position to place over top of the main navbar on small screens */
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1000;
  /* Set background color to white to make sure it remains hidden */
  background-color: white;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
}

/* Navigation buttons - shown for small screens only */
.stall-details-btn-container {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  padding: 0.7rem;
  display: flex;
  justify-content: space-between;
}

.stall-image {
  width: 100%;
  height: 15rem;
  object-fit: cover;
}

/* Title and stall status in this container */
.stall-title-container {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  padding: 0.5rem 1rem 0.2rem;
  font-weight: 600;
}

.stall-name {
  font-size: 1.2rem;
}

.stall-address {
  width: 100%;
  padding: 0 1rem 1rem;
  font-size: 0.8rem;
  text-decoration: underline;
  cursor: pointer;

  &:hover {
    color: var(--main-dark-color);
  }
}

/* CSS nesting used below - not supported in old browsers */
.stall-text-subsection {
  width: 90%;
  padding: 1rem 0;
  font-size: 0.8rem;
  border-top: 1px solid var(--main-dark-color);

  & h3 {
    font-size: 0.9rem;
    color: var(--main-dark-color);
    margin-bottom: 0.2rem;
  }

  & p:first-letter {
    text-transform: capitalize;
  }

  /* Labels in the about section (e.g. Organic) */
  & ul {
    width: 100%;
    display: flex;
    gap: 1rem;
    margin: 0.2rem 0 0.5rem;
    text-transform: capitalize;
  }

  & li {
    list-style-position: inside;
    font-weight: 500;
  }
}

/* Line for an individual fruit or vege */
/* Grid to separate item and dollar amount */
.stall-item-container {
  width: 100%;
  display: grid;
  grid-template-columns: 8fr 1fr;
  margin: 0.5rem 0;
}

.stall-time-container {
  width: 100%;
  min-width: 20rem;
  display: grid;
  grid-template-columns: 1fr 1fr;
}

/* Button container for wide screen only */
.stall-details-wide-btn-container {
  display: none;
}

/* Make the top image larger on screens wider than 500px */
@media screen and (min-width: 450px) {
  .stall-image {
    height: 20rem;
  }
}

/* Different format for desktop and tablets  */
@media screen and (min-width: 700px) {
  .stall-details {
    position: relative;
    margin: 2rem auto;
    padding: 0 2rem;
    display: grid;
    grid-template-columns: auto auto;
    /* Set height for first two rows - contains title and address */
    grid-template-rows: 2.5rem 2rem auto auto;
    gap: 0 2rem;
    align-items: start;
    /* Set max-width so not too streched on large screen */
    max-width: 900px;
  }

  /* Hide top buttons on larger screens */
  .stall-details-btn-container {
    display: none;
  }

  .stall-image {
    height: 15rem;
    width: auto;
    grid-column: 2;
    grid-row: 1 / 4;
    margin-bottom: 1rem;
    border-radius: 1rem;
    align-self: center;
    justify-self: center;
  }

  .stall-title-container,
  .stall-address {
    padding: 0;
  }

  .stall-name {
    font-size: 1.5rem;
    /* Make sure stall name does not overlap stall status */
    margin-right: 2rem;
    white-space: nowrap;
  }

  .stall-text-subsection {
    width: 100%;
    padding: 1rem 0.5rem;
  }

  .stall-details-wide-btn-container {
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 2rem;
    margin-top: 1rem;
    /* Center this container by placing across both columns */
    grid-column: 1 / 3;
  }

  /* Below are classes to place elements in specific grid cells */
  .left-column {
    grid-column: 1;
  }

  .right-column {
    grid-column: 2;
  }

  .row-one {
    grid-row: 1;
  }

  .row-two {
    grid-row: 2;
  }

  .row-three {
    grid-row: 3;
  }

  .row-four {
    grid-row: 4;
  }
}

